Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79442

QScreen signals emitted only for the first display rearrangement on Windows after update to Win10/1903

XMLWordPrintable

    • Windows
    • 867b11596be8bb5864650f98698d1015c4f26812 (qt-dev, 9.1.2021, 6.1)

      Rearranging display layout in Windows 10 settings would result in QScreen emitting a set of different signals every time it is done. However, with Windows 1903 the signals are emitted only for the first time the displays are rearranged. Any subsequent change to the display layout after the first change does not trigger any QScreen signal emission unlike in earlier Win 10 versions such as 1803.

      So far this problem has been seen only with Windows 1903.

      Steps to reproduce:

      1. Change Taskbar settings to be displayed one screen only
      2. Run the attached project
      3. Move to screen where no task bar is
      4. Right click on the desktop > display settings & rearrange displays (move screen up and down), click apply
      5. Observe the logged signals from the test application

        1. bandicam 2019-11-07 15-20-21-115.mp4
          1.67 MB
        2. image-2019-11-07-13-09-39-418.png
          image-2019-11-07-13-09-39-418.png
          14 kB
        3. image-2019-11-07-14-16-07-333.png
          image-2019-11-07-14-16-07-333.png
          18 kB
        4. image-2019-11-07-14-16-28-812.png
          image-2019-11-07-14-16-28-812.png
          18 kB
        5. qtbug79442_diag.diff
          4 kB
        6. qtbug79442_log.txt
          4 kB
        7. qtbug79442.zip
          3 kB
        For Gerrit Dashboard: QTBUG-79442
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            miikapernu Miika Pernu
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes